<resources>
    <string name="app_name">Lab2Exer1</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="button5">Button5</string>
    <string name="button6">Button6</string>
    <string name="button7">Button7</string>
    <string name="androidpic">androidPic</string>
    <string name="title">TITLE</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
</resources>
